[gd_scene load_steps=3 format=3 uid="uid://cs8eylb6ck137"]

[ext_resource type="Script" uid="uid://chb1o84ma7u4" path="res://ui.gd" id="1_fyqef"]
[ext_resource type="PackedScene" uid="uid://c4g2aqdb13oc3" path="res://plot/plot.tscn" id="2_m6e0p"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 20.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ThrustRatioBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
max_value = 1.0

[node name="TogglePlot" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Enable Plot"

[node name="Plot" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_m6e0p")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="MarginContainer/VBoxContainer/TogglePlot" to="." method="_on_toggle_plot_toggled"]
